--- a/notebooks/external-validation/ext_prep_data_for_cm.ipynb
+++ b/notebooks/external-validation/ext_prep_data_for_cm.ipynb
@@ -986,7 +986,7 @@
     "    sampling, rse = limit, epoch\n",
     "    if np.ceil(eeg.fs) == limit: rse = epoch\n",
     "\n",
-    "    elif np.ceil(eeg.fs)/limit == 2: rse = dwindle(epoch, int(np.ceil(eeg.fs)/limit)-1)\n",
+    "    elif np.ceil(eeg.fs)//limit == 2: rse = dwindle(epoch, int(np.ceil(eeg.fs)/limit)-1)\n",
     "    elif np.ceil(eeg.fs)//limit == 4: rse = dwindle(epoch, int(np.ceil(eeg.fs)/limit)-3)\n",
     "\n",
     "    elif np.ceil(eeg.fs)<limit: rse = upsample(epoch, np.ceil(eeg.fs), limit)\n",
@@ -1163,7 +1163,10 @@
     "\n",
     "main_folder = \"/content/gdrive/My Drive/Ext-val/\"\n",
     "\n",
-    "edf_dir = main_folder + \"Ext-val-edf/\""
+    "edf_dir = main_folder + \"Ext-val-edf/\"\n",
+    "\n",
+    "path_prep = main_folder + \"preprocessed/\"\n",
+    "os.makedirs(path_prep, exist_ok=True)"
    ]
   },
   {
@@ -1180,87 +1183,92 @@
    "outputs": [],
    "source": [
     "for bands in [None,(0,4),(4,8),(8,13),(13,30),(30,70),(70,150)]:\n",
-    "    print(bands)\n",
+    "    print(\"Preprocessing in frequency bands:\", bands)\n",
+    "    \n",
+    "    file_name = \"\"\n",
+    "    if bands is not None:  file_name = f\"{subject_id}-{run_id}-{bands}-30sec.prep\".replace(\" \",\"\")\n",
+    "    elif bands is None:    file_name = f\"{subject_id}-{run_id}-30sec.prep\"\n",
+    "    file_path = os.path.join(path_prep, file_name)\n",
     "\n",
-    "    for file_seizure in os.listdir(edf_dir):\n",
+    "    if not os.path.exists(file_path):\n",
     "\n",
-    "        if file_seizure.endswith(\".edf\"):\n",
-    "        \n",
-    "            subject_id = os.path.basename(file_seizure).split('_')[0]\n",
-    "            print(\"Subject ID:\", subject_id)\n",
-    "            run_id = os.path.basename(file_seizure).split('_')[-1].split('.')[0]\n",
-    "            print(\"Run ID:\", run_id)\n",
+    "        for file_seizure in os.listdir(edf_dir):\n",
     "\n",
-    "            # Define step and span for a 30-s window, to have 119 epochs in total\n",
-    "            span, step = 1000, 250      # in ms\n",
-    "            min_woi_duration = 30000    # in ms\n",
-    "            n_epochs = int((min_woi_duration/step)-1)\n",
-    "\n",
-    "            print(\"Number of epochs to consider for classification =\", n_epochs)\n",
-    "\n",
-    "            eeg_seizure = EEG.from_file(file_seizure, epoch(ms(step), ms(span)))    # load raw seizure SEEG data as an EEG object (class)\n",
+    "            if file_seizure.endswith(\".edf\"):\n",
     "            \n",
-    "            # Find seizure onset and offset times in the manually created Excel table\n",
-    "            seizure_onset, seizure_offset = find_annotations(subject_id, run_id)\n",
-    "            sz_start_note, sz_end_note = 'Start', 'End'\n",
-    "            eeg_seizure.notes[sz_start_note] = [secs(seizure_onset)]\n",
-    "            eeg_seizure.notes[sz_end_note] = [secs(seizure_offset)]\n",
-    "            notes_seizure = [note for note in eeg_seizure.notes]\n",
+    "                subject_id = os.path.basename(file_seizure).split('_')[0]\n",
+    "                print(\"Subject ID:\", subject_id)\n",
+    "                run_id = os.path.basename(file_seizure).split('_')[-1].split('.')[0]\n",
+    "                print(\"Run ID:\", run_id)\n",
     "\n",
-    "            # Manually set seizure duration\n",
-    "            if eeg_seizure.duration != get_duration(subject_id, run_id):\n",
-    "                eeg_seizure.duration = secs(get_duration(subject_id, run_id))\n",
-    "            print(\"Seizure file duration:\", eeg_seizure.duration)\n",
+    "                # Define step and span for a 30-s window, to have 119 epochs in total\n",
+    "                span, step = 1000, 250      # in ms\n",
+    "                min_woi_duration = 30000    # in ms\n",
+    "                n_epochs = int((min_woi_duration/step)-1)\n",
     "\n",
-    "            # Define nodes and extract bad channels\n",
-    "            nodes = list(eeg_seizure.axes.region)\n",
-    "            bad_channels_result = find_bad_channels(main_folder + subject_id + \"/ses-presurgery/ieeg/\")\n",
-    "            bad_channels = bad_channels_result.get(f\"{subject_id}_{run_id}\", [])\n",
+    "                print(\"Number of epochs to consider for classification =\", n_epochs)\n",
     "\n",
-    "            # Define the frequency to which the files should be resampled to (in Hz)\n",
-    "            resampling = 500\n",
+    "                eeg_seizure = EEG.from_file(edf_dir + file_seizure, epoch(ms(step), ms(span)))    # load raw seizure SEEG data as an EEG object (class)\n",
+    "                \n",
+    "                # Find seizure onset and offset times in the manually created Excel table\n",
+    "                seizure_onset, seizure_offset = find_annotations(subject_id, run_id)\n",
+    "                sz_start_note, sz_end_note = 'Start', 'End'\n",
+    "                eeg_seizure.notes[sz_start_note] = [secs(seizure_onset)]\n",
+    "                eeg_seizure.notes[sz_end_note] = [secs(seizure_offset)]\n",
+    "                notes_seizure = [note for note in eeg_seizure.notes]\n",
     "\n",
-    "            # Label the epochs relative to the position of clinical annotations\n",
-    "            SET(eeg_seizure, _as='N')                      # N - baseline (non-seizure)\n",
-    "            SET(eeg_seizure, sz_start_note, 'W')            # W - WOI\n",
-    "            SET(eeg_seizure, sz_end_note, 'S', epoch.END)    # S - seizure\n",
+    "                # Manually set seizure duration\n",
+    "                if eeg_seizure.duration != get_duration(subject_id, run_id):\n",
+    "                    eeg_seizure.duration = secs(get_duration(subject_id, run_id))\n",
+    "                print(\"Seizure file duration:\", eeg_seizure.duration)\n",
     "\n",
-    "            eeg_seizure.optimize()\n",
-    "            eeg_seizure.remap()\n",
+    "                # Define nodes and extract bad channels\n",
+    "                nodes = list(eeg_seizure.axes.region)\n",
+    "                bad_channels_result = find_bad_channels(main_folder + subject_id + \"/ses-presurgery/ieeg/\")\n",
+    "                bad_channels = bad_channels_result.get(f\"{subject_id}_{run_id}\", [])\n",
     "\n",
-    "            units = int((eeg_seizure.notes[sz_end_note][0].time - eeg_seizure.notes[sz_start_note][0].time)*(span/step))\n",
+    "                # Define the frequency to which the files should be resampled to (in Hz)\n",
+    "                resampling = 500\n",
     "\n",
-    "            eeg_seizure.tag(('W', 'S'), W=range(-units-n_epochs,-units,1), S=range(-units+n_epochs,-units,-1))\n",
+    "                # Label the epochs relative to the position of clinical annotations\n",
+    "                SET(eeg_seizure, _as='N')                      # N - baseline (non-seizure)\n",
+    "                SET(eeg_seizure, sz_start_note, 'W')            # W - WOI\n",
+    "                SET(eeg_seizure, sz_end_note, 'S', epoch.END)    # S - seizure\n",
     "\n",
-    "            a, ai = eeg_seizure.sample.get('W', n_epochs)   # fetch epochs and epoch indices\n",
-    "            b, bi = eeg_seizure.sample.get('S', n_epochs)\n",
-    "            i = ai + bi                                     # save indices\n",
-    "            x = a + b                                       # save epochs\n",
-    "            y = [1]*n_epochs + [0]*n_epochs                 # save epoch labels (1 for seizure, 0 for baseline)\n",
+    "                eeg_seizure.optimize()\n",
+    "                eeg_seizure.remap()\n",
     "\n",
-    "            print(\"Total number of epochs (seizure + baseline) =\", len(x))\n",
-    "            print(\"Epoch shape =\", a[0].shape)\n",
+    "                units = int((eeg_seizure.notes[sz_end_note][0].time - eeg_seizure.notes[sz_start_note][0].time)*(span/step))\n",
     "\n",
-    "            # Exclude bad channels\n",
-    "            bad_channels_ids = [nodes.index(node) for node in bad_channels]\n",
-    "            clean_x = [exclude_bads(epoch, bad_channels_ids) for epoch in x]\n",
-    "            x = clean_x\n",
+    "                eeg_seizure.tag(('W', 'S'), W=range(-units-n_epochs,-units,1), S=range(-units+n_epochs,-units,-1))\n",
     "\n",
-    "            clean_nodes = [value for value in nodes if value not in bad_channels]\n",
+    "                a, ai = eeg_seizure.sample.get('W', n_epochs)   # fetch epochs and epoch indices\n",
+    "                b, bi = eeg_seizure.sample.get('S', n_epochs)\n",
+    "                i = ai + bi                                     # save indices\n",
+    "                x = a + b                                       # save epochs\n",
+    "                y = [1]*n_epochs + [0]*n_epochs                 # save epoch labels (1 for seizure, 0 for baseline)\n",
     "\n",
-    "            pp_seizure = [preprocess(eeg_seizure, ep, resampling) for i,ep in enumerate(a)]\n",
-    "            print(\"Resampled to\", pp_seizure[0].shape)\n",
-    "            fpp_seizure = [band(e, bands, pp_seizure[0].shape[1]) for e in pp_seizure] if Bands else pp_seizure\n",
+    "                print(\"Total number of epochs (seizure + baseline) =\", len(x))\n",
+    "                print(\"Epoch shape =\", a[0].shape)\n",
     "\n",
-    "            ready_epochs = fpp_seizure\n",
+    "                # Exclude bad channels\n",
+    "                bad_channels_ids = [nodes.index(node) for node in bad_channels]\n",
+    "                clean_x = [exclude_bads(epoch, bad_channels_ids) for epoch in x]\n",
+    "                x = clean_x\n",
     "\n",
-    "            prep = struct(x=np.array(x), y=np.array(y), i=np.array(i), x_prep=ready_epochs, nodes=clean_nodes)\n",
+    "                clean_nodes = [value for value in nodes if value not in bad_channels]\n",
+    "                print(\"Bad channels excluded:\", len(clean_nodes)==len(nodes)-len(bad_channels))\n",
     "\n",
-    "            path_prep = main_folder + \"preprocessed/\"\n",
-    "            os.makedirs(path_prep, exist_ok=True)\n",
+    "                pp_seizure = [preprocess(eeg_seizure, ep, resampling) for i,ep in enumerate(a)]\n",
+    "                print(\"Resampled to\", pp_seizure[0].shape)\n",
+    "                fpp_seizure = [band(e, bands, pp_seizure[0].shape[1]) for e in pp_seizure] if bands!=None else pp_seizure\n",
     "\n",
-    "            if bands is not None:          REc(prep).save(path_prep + f\"{subject_id}-{run_id}-{bands}-30sec.prep\".replace(\" \",\"\"))\n",
-    "            elif bands is None:    REc(prep).save(path_prep + f\"{subject_id}-{run_id}-30sec.prep\")"
+    "                ready_epochs = fpp_seizure\n",
+    "\n",
+    "                prep = struct(x=np.array(x), y=np.array(y), i=np.array(i), x_prep=ready_epochs, nodes=clean_nodes)\n",
+    "\n",
+    "                if bands is not None:          REc(prep).save(path_prep + f\"{subject_id}-{run_id}-{bands}-30sec.prep\".replace(\" \",\"\"))\n",
+    "                elif bands is None:    REc(prep).save(path_prep + f\"{subject_id}-{run_id}-30sec.prep\")"
    ]
   }
  ],
