--- a/notebooks/external-validation/ext_prep_data_for_cm.ipynb
+++ b/notebooks/external-validation/ext_prep_data_for_cm.ipynb
@@ -987,7 +987,7 @@
     "    if np.ceil(eeg.fs) == limit: rse = epoch\n",
     "\n",
     "    elif np.ceil(eeg.fs)//limit == 2: rse = dwindle(epoch, int(np.ceil(eeg.fs)/limit)-1)\n",
-    "    elif np.ceil(eeg.fs)//limit == 4: rse = dwindle(epoch, int(np.ceil(eeg.fs)/limit)-3)\n",
+    "    elif np.ceil(eeg.fs)//limit == 4: rse = dwindle(epoch, int(np.ceil(eeg.fs)/limit)-2)\n",
     "\n",
     "    elif np.ceil(eeg.fs)<limit: rse = upsample(epoch, np.ceil(eeg.fs), limit)\n",
     "    else: print(\"Error: Cannot resample with the current version of preprocessing function.\")\n",
@@ -1252,6 +1252,7 @@
     "                print(\"Epoch shape =\", a[0].shape)\n",
     "\n",
     "                # Exclude bad channels\n",
+    "                if subject_id==\"sub-pt01\" and run_id==\"run-01\": bad_channels.pop(); bad_channels.append(\"N/A\")\n",
     "                bad_channels_ids = [nodes.index(node) for node in bad_channels]\n",
     "                clean_x = [exclude_bads(epoch, bad_channels_ids) for epoch in x]\n",
     "                x = clean_x\n",
