--- a/notebooks/external-validation/ext_prep_data_for_cm.ipynb
+++ b/notebooks/external-validation/ext_prep_data_for_cm.ipynb
@@ -1029,7 +1029,8 @@
     "    onset, offset = None, None\n",
     "\n",
     "    # Load the DataFrame from the Excel file\n",
-    "    df = pd.read_excel(\"/content/gdrive/My Drive/Ext-val/onset_annotations.xlsx\")\n",
+    "    # df = pd.read_excel(\"/content/gdrive/My Drive/Ext-val/onset_annotations.xlsx\")\n",
+    "    df = pd.read_excel(\"/media/kivi/ADATA HV100/Ext-val/onset_annotations.xlsx\")\n",
     "\n",
     "    # # Discard rows with a value of 1 in the 'UNCLEAR' column\n",
     "    # df = df[df['UNCLEAR'] != 1] # subjh106 unique run is unclear\n",
@@ -1059,7 +1060,8 @@
     "    \"\"\"\n",
     "\n",
     "    # Load the DataFrame from the Excel file\n",
-    "    df = pd.read_excel(\"/content/gdrive/My Drive/Ext-val/metadata.xlsx\")\n",
+    "    # df = pd.read_excel(\"/content/gdrive/My Drive/Ext-val/metadata.xlsx\")\n",
+    "    df = pd.read_excel(\"/media/kivi/ADATA HV100/Ext-val/metadata.xlsx\")\n",
     "\n",
     "    # Find the row with the specified SUB_ID and RUN_ID\n",
     "    selected_row = df[(df['SUB_ID'] == sub_id) & (df['RUN_ID'] == run_id)]\n",
@@ -1158,10 +1160,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/gdrive')\n",
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/gdrive')\n",
     "\n",
-    "main_folder = \"/content/gdrive/My Drive/Ext-val/\"\n",
+    "# main_folder = \"/content/gdrive/My Drive/Ext-val/\"\n",
+    "\n",
+    "# edf_dir = main_folder + \"Ext-val-edf/\"\n",
+    "\n",
+    "# path_prep = main_folder + \"preprocessed/\"\n",
+    "# os.makedirs(path_prep, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In case you are using your local machine, define the paths here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_folder = \"/media/kivi/ADATA HV100/Ext-val/\"\n",
     "\n",
     "edf_dir = main_folder + \"Ext-val-edf/\"\n",
     "\n",
@@ -1260,7 +1283,7 @@
     "                clean_nodes = [value for value in nodes if value not in bad_channels]\n",
     "                print(\"Bad channels excluded:\", len(clean_nodes)==len(nodes)-len(bad_channels))\n",
     "\n",
-    "                pp_seizure = [preprocess(eeg_seizure, ep, resampling) for i,ep in enumerate(a)]\n",
+    "                pp_seizure = [preprocess(eeg_seizure, ep, resampling) for i,ep in enumerate(x)]\n",
     "                print(\"Resampled to\", pp_seizure[0].shape)\n",
     "                fpp_seizure = [band(e, bands, pp_seizure[0].shape[1]) for e in pp_seizure] if bands!=None else pp_seizure\n",
     "\n",
@@ -1274,8 +1297,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "xnn",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
