--- a/notebooks/external-validation/shell/game_vKarla_outcome_prediction_ext.ipynb
+++ b/notebooks/external-validation/shell/game_vKarla_outcome_prediction_ext.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from google.colab import drive\n",
     "drive.mount('/content/gdrive')\n",
-    "main_folder = \"/content/gdrive/My Drive/epigame-folder/game_vKarla/\""
+    "main_folder = \"/content/gdrive/My Drive/Ext-val/\""
    ]
   },
   {
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn_measures = ['PAC', 'SCR-(0,4)', 'SCI-(0,4)', 'PLV-(0,4)', 'PLI-(0,4)', 'CC-(0,4)', 'SCR-(4,8)', 'SCI-(4,8)', 'PLV-(4,8)', 'PLI-(4,8)', 'CC-(4,8)', 'SCR-(8,13)', 'SCI-(8,13)', 'PLV-(8,13)', 'PLI-(8,13)', 'CC-(8,13)', 'SCR-(13,30)', 'SCI-(13,30)', 'PLV-(13,30)', 'PLI-(13,30)', 'CC-(13,30)', 'SCR-(30,70)', 'SCI-(30,70)', 'PLV-(30,70)', 'PLI-(30,70)', 'CC-(30,70)', 'SCR-(70,150)', 'SCI-(70,150)', 'PLV-(70,150)', 'PLI-(70,150)', 'CC-(70,150)']"
+    "conn_measures = ['PAC', 'SCR-(1,4)', 'SCI-(1,4)', 'PLV-(1,4)', 'PLI-(1,4)', 'CC-(1,4)', 'SCR-(4,8)', 'SCI-(4,8)', 'PLV-(4,8)', 'PLI-(4,8)', 'CC-(4,8)', 'SCR-(8,13)', 'SCI-(8,13)', 'PLV-(8,13)', 'PLI-(8,13)', 'CC-(8,13)', 'SCR-(13,30)', 'SCI-(13,30)', 'PLV-(13,30)', 'PLI-(13,30)', 'CC-(13,30)', 'SCR-(30,70)', 'SCI-(30,70)', 'PLV-(30,70)', 'PLI-(30,70)', 'CC-(30,70)', 'SCR-(70,150)', 'SCI-(70,150)', 'PLV-(70,150)', 'PLI-(70,150)', 'CC-(70,150)']"
    ]
   },
   {
@@ -74,7 +74,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: concatenate data into a single dataframe"
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Path to the directory containing Excel files\n",
+    "xlsx_dir = main_folder + 'data_per_sigma/'\n",
+    "\n",
+    "# Initialize empty dataframes for each type\n",
+    "df_0sigma = pd.DataFrame()\n",
+    "df_1sigma = pd.DataFrame()\n",
+    "df_2sigma = pd.DataFrame()\n",
+    "df_3sigma = pd.DataFrame()\n",
+    "df_4sigma = pd.DataFrame()\n",
+    "\n",
+    "# Iterate through files in the directory\n",
+    "for filename in os.listdir(xlsx_dir):\n",
+    "    if filename.endswith('.xlsx'):\n",
+    "        # Extract type and subject ID from filename\n",
+    "        parts = filename.split('_')\n",
+    "        file_type = parts[-2]\n",
+    "        subject_id = parts[-1].split('.')[0]\n",
+    "\n",
+    "        # Read Excel file into a dataframe\n",
+    "        file_path = os.path.join(xlsx_dir, filename)\n",
+    "        df = pd.read_excel(file_path)\n",
+    "\n",
+    "        # Concatenate dataframe to the corresponding type dataframe\n",
+    "        if file_type == '0sigma':\n",
+    "            df_0sigma = pd.concat([df_1sigma, df], ignore_index=True)        \n",
+    "        elif file_type == '1sigma':\n",
+    "            df_1sigma = pd.concat([df_1sigma, df], ignore_index=True)\n",
+    "        elif file_type == '2sigma':\n",
+    "            df_2sigma = pd.concat([df_2sigma, df], ignore_index=True)\n",
+    "        elif file_type == '3sigma':\n",
+    "            df_3sigma = pd.concat([df_3sigma, df], ignore_index=True)\n",
+    "        elif file_type == '4sigma':\n",
+    "            df_4sigma = pd.concat([df_4sigma, df], ignore_index=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save dataframes to Excel files\n",
+    "df_0sigma.to_excel(os.path.join(xlsx_dir,'surgical_outcome_data_0sigma.xlsx'), index=False)\n",
+    "df_1sigma.to_excel(os.path.join(xlsx_dir,'surgical_outcome_data_1sigma.xlsx'), index=False)\n",
+    "df_2sigma.to_excel(os.path.join(xlsx_dir,'surgical_outcome_data_2sigma.xlsx'), index=False)\n",
+    "df_3sigma.to_excel(os.path.join(xlsx_dir,'surgical_outcome_data_3sigma.xlsx'), index=False)\n",
+    "df_4sigma.to_excel(os.path.join(xlsx_dir,'surgical_outcome_data_4sigma.xlsx'), index=False)\n"
    ]
   },
   {
@@ -92,7 +142,6 @@
    "source": [
     "# !pip install statannot\n",
     "\n",
-    "import pandas as pd\n",
     "import seaborn as sns\n",
     "from statannot import add_stat_annotation\n",
     "from scipy.stats import shapiro, mannwhitneyu, ttest_ind\n",
@@ -111,19 +160,19 @@
    "source": [
     "sigma = 4\n",
     "while sigma > 0:\n",
-    "    load_data = pd.read_excel(main_folder + f\"surgical_outcome_data_{sigma}sigma.xlsx\", engine='openpyxl')\n",
+    "    load_data = pd.read_excel(xlsx_dir + f\"surgical_outcome_data_{sigma}sigma.xlsx\", engine='openpyxl')\n",
     "\n",
     "    # Check if \"Mean_overlap_ratio\" contains any zeros\n",
     "    zero_row_indices = load_data.index[load_data[\"Mean_overlap_ratio\"] == 0].tolist()\n",
     "\n",
     "    if zero_row_indices:\n",
     "        print(f\"Zeros found in rows {zero_row_indices} for sigma={sigma}\")\n",
-    "        if sigma == 1:\n",
+    "        if sigma == 0:\n",
     "            print(\"Skipping iteration for sigma=1 with zeros\")\n",
     "            break\n",
     "\n",
     "        sigma -= 1\n",
-    "        prev_load_data = pd.read_excel(main_folder + f\"surgical_outcome_data_{sigma}sigma.xlsx\", engine='openpyxl')\n",
+    "        prev_load_data = pd.read_excel(xlsx_dir + f\"surgical_outcome_data_{sigma}sigma.xlsx\", engine='openpyxl')\n",
     "\n",
     "        for zero_row_index in zero_row_indices:\n",
     "            zero_value = prev_load_data.loc[zero_row_index, \"Mean_overlap_ratio\"]\n",
@@ -141,15 +190,19 @@
    "source": [
     "CM, Sigma, Summary_stat, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [], [], [], [], [], [], [], [], [], [], []\n",
     "\n",
-    "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
-    "\n",
+    "summary_stat_label = [\"mm\"]\n",
+    "n_good=17\n",
+    "n_bad=7\n",
     "for cm in conn_measures:\n",
     "    for summary_stat in summary_stat_label:\n",
     "        data = load_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(summary_stat)\n",
     "\n",
+    "        if 16 not in list(data.Subject): n_bad=6\n",
+    "        else: n_bad=7\n",
+    "\n",
     "        x_plot, y_plot = list(data.Mean_overlap_ratio), [\"good\" if val == 1 else \"bad\" for val in data[\"Outcome\"]]\n",
     "\n",
-    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001, n_good=17, n_bad=7)\n",
+    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001, n_good=n_good, n_bad=n_bad)\n",
     "\n",
     "        group1 = [x for i, x in enumerate(x_plot) if y_plot[i] == \"good\"]\n",
     "        group0 = [x for i, x in enumerate(x_plot) if y_plot[i] == \"bad\"]\n",
@@ -174,13 +227,13 @@
     "                        palette=[\"#404040\", \"#404040\"],\n",
     "                        alpha=0.6, dodge=True)\n",
     "\n",
-    "        p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\", \"bad\"],\n",
-    "                                      box_pairs=[(\"good\", \"bad\")],\n",
-    "                                      test=stest, text_format='star', loc='outside', verbose=0)\n",
+    "        # p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\", \"bad\"],\n",
+    "        #                               box_pairs=[(\"good\", \"bad\")],\n",
+    "        #                               test=stest, text_format='star', loc='outside', verbose=0)\n",
     "\n",
-    "        pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
+    "        # pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
     "        if pvalue <= 0.05:\n",
-    "            print(\"P-value computed by statannot =\", pvalue_statannot)\n",
+    "            # print(\"P-value computed by statannot =\", pvalue_statannot)\n",
     "            print(stest)\n",
     "            plt.title(f\"Measure = {cm}; summary_stat = {summary_stat}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
     "            plt.show()\n",
@@ -222,8 +275,9 @@
    "source": [
     "CM, Summary_stat, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [], [], [], [], [], [], [], [], [], []\n",
     "\n",
-    "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
-    "\n",
+    "summary_stat_label = [\"mm\"]\n",
+    "n_good=17\n",
+    "n_bad=7\n",
     "for cm in combinations(conn_measures, 2): # combinations of scores based on different connectivity measures\n",
     "    cm1,cm2 = cm[0],cm[1]\n",
     "    # print(cm1,cm2)\n",
@@ -233,6 +287,10 @@
     "        data1 = load_data.groupby(\"CM\").get_group(cm1).groupby(\"Strategy\").get_group(summary_stat)\n",
     "        data2 = load_data.groupby(\"CM\").get_group(cm2).groupby(\"Strategy\").get_group(summary_stat)\n",
     "\n",
+    "        if 16 not in list(data1.Subject) and 16 in list(data2.Subject): data2 = data2[data2['Subject'] != 16]; n_bad=6\n",
+    "        elif 16 not in list(data2.Subject) and 16 in list(data1.Subject): data1 = data1[data1['Subject'] != 16]; n_bad=6\n",
+    "        else: n_bad=7\n",
+    "\n",
     "        # the combination is made as a mean value between two scores\n",
     "        x_plot = [np.mean([val, list(data2.Mean_overlap_ratio)[i]]) for i,val in enumerate(data1.Mean_overlap_ratio)]\n",
     "        y_plot = [\"good\" if val==1 else \"bad\" for val in data1[\"Outcome\"]]\n",
@@ -241,7 +299,7 @@
     "                                \"Outcome\":y_plot})\n",
     "\n",
     "        # calculate moving threshold-based AUC\n",
-    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001, n_good=17, n_bad=7)\n",
+    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001, n_good=n_good, n_bad=n_bad)\n",
     "\n",
     "        group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"good\"]\n",
     "        group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"bad\"]\n",
@@ -261,13 +319,13 @@
     "                        palette=[\"#404040\",\"#404040\"],\n",
     "                        alpha=0.6, dodge=True);\n",
     "\n",
-    "        p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
-    "                        box_pairs=[(\"good\",\"bad\")],\n",
-    "                        test=stest, text_format='star', loc='outside', verbose=0);\n",
+    "        # p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
+    "        #                 box_pairs=[(\"good\",\"bad\")],\n",
+    "        #                 test=stest, text_format='star', loc='outside', verbose=0);\n",
     "\n",
-    "        pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
+    "        # pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
     "        if pvalue<=0.05:\n",
-    "            print(\"P-value computed by statannot =\", pvalue_statannot)\n",
+    "            # print(\"P-value computed by statannot =\", pvalue_statannot)\n",
     "            print(stest)\n",
     "            print(summary_stat)\n",
     "            plt.title(f\"Measures = {(cm1, cm2)}; p-value = {pvalue:.4f}; AUC = {mauc[0]:.2f}\", pad=50)\n",
@@ -291,7 +349,7 @@
     "                          \"Test\": Test, \"Pvalue\": Pvalue,\n",
     "                          \"MAUC\": MAUC, \"T\": T, \"TN\": TN, \"TP\": TP})\n",
     "\n",
-    "outcome_pred.to_excel(f\"surgical_outcome_prediction_game_vKarla_sigma_recursive_comb2.xlsx\")\n",
+    "outcome_pred.to_excel(main_folder + f\"surgical_outcome_prediction_game_vKarla_sigma_recursive_comb2.xlsx\")\n",
     "pass;"
    ]
   },
@@ -310,27 +368,33 @@
    "source": [
     "CM, Summary_stat, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [], [], [], [], [], [], [], [], [], []\n",
     "\n",
-    "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
+    "summary_stat_label = [\"mm\"]\n",
     "\n",
     "for cm in combinations(conn_measures, 3): # combinations of scores based on different connectivity measures\n",
     "    cm1,cm2,cm3 = cm[0],cm[1],cm[2]\n",
     "    # print(cm1,cm2,cm3)\n",
     "\n",
     "    for summary_stat in summary_stat_label:\n",
-    "\n",
+    "        n_good, n_bad = 17, 7\n",
     "        data1 = load_data.groupby(\"CM\").get_group(cm1).groupby(\"Strategy\").get_group(summary_stat)\n",
     "        data2 = load_data.groupby(\"CM\").get_group(cm2).groupby(\"Strategy\").get_group(summary_stat)\n",
     "        data3 = load_data.groupby(\"CM\").get_group(cm3).groupby(\"Strategy\").get_group(summary_stat)\n",
     "\n",
+    "        if 16 not in list(data1.Subject) or 16 not in list(data2.Subject) or 16 not in list(data3.Subject):\n",
+    "            data1 = data1[data1['Subject'] != 16]\n",
+    "            data2 = data2[data2['Subject'] != 16]\n",
+    "            data3 = data3[data3['Subject'] != 16]            \n",
+    "            n_bad=6\n",
+    "\n",
     "        # the combination is made as a mean value between two scores\n",
     "        x_plot = [np.mean([val, list(data2.Mean_overlap_ratio)[i], list(data3.Mean_overlap_ratio)[i]]) for i,val in enumerate(data1.Mean_overlap_ratio)]\n",
     "        y_plot = [\"good\" if val==1 else \"bad\" for val in data1[\"Outcome\"]]\n",
-    "        \n",
+    "\n",
     "        data = pd.DataFrame({\"Mean_overlap_ratio\":x_plot,\n",
     "                                \"Outcome\":y_plot})\n",
     "\n",
     "        # calculate moving threshold-based AUC\n",
-    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001, n_good=17, n_bad=7)\n",
+    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001, n_good=n_good, n_bad=n_bad)\n",
     "\n",
     "        group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"good\"]\n",
     "        group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"bad\"]\n",
@@ -350,16 +414,16 @@
     "                        palette=[\"#404040\",\"#404040\"],\n",
     "                        alpha=0.6, dodge=True);\n",
     "\n",
-    "        p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
-    "                        box_pairs=[(\"good\",\"bad\")],\n",
-    "                        test=stest, text_format='star', loc='outside', verbose=0);\n",
+    "        # p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
+    "        #                 box_pairs=[(\"good\",\"bad\")],\n",
+    "        #                 test=stest, text_format='star', loc='outside', verbose=0);\n",
     "\n",
-    "        pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
+    "        # pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
     "        if pvalue<=0.05:\n",
-    "            print(\"P-value computed by statannot =\", pvalue_statannot)\n",
+    "            # print(\"P-value computed by statannot =\", pvalue_statannot)\n",
     "            print(stest)\n",
     "            print(summary_stat)\n",
-    "            plt.title(f\"Measures = {(cm1, cm2)}; p-value = {pvalue:.4f}; AUC = {mauc[0]:.2f}\", pad=50)\n",
+    "            plt.title(f\"Measures = {(cm1, cm2, cm3)}; p-value = {pvalue:.4f}; AUC = {mauc[0]:.2f}\", pad=50)\n",
     "            plt.show()\n",
     "\n",
     "        plt.close('all')\n",
@@ -380,7 +444,7 @@
     "                          \"Test\": Test, \"Pvalue\": Pvalue,\n",
     "                          \"MAUC\": MAUC, \"T\": T, \"TN\": TN, \"TP\": TP})\n",
     "\n",
-    "outcome_pred.to_excel(f\"surgical_outcome_prediction_game_vKarla_sigma_recursive_comb3.xlsx\")\n",
+    "outcome_pred.to_excel(main_folder + f\"surgical_outcome_prediction_game_vKarla_sigma_recursive_comb3.xlsx\")\n",
     "pass;"
    ]
   }
