--- a/epirev/consensus_pubs.ipynb
+++ b/epirev/consensus_pubs.ipynb
@@ -87,7 +87,7 @@
     "unique_pubmed_ids = [pubmed_id for pubmed_id in karla_pubmed_ids if pubmed_id not in consensus_pubmed_ids]\n",
     "\n",
     "# Step 3: Save the unique PubMed IDs to a new TXT file\n",
-    "output_file_path = 'unreviewed_pubmed_ids.txt'\n",
+    "output_file_path = '/home/kivi/Downloads/unreviewed_pubmed_ids.txt'\n",
     "with open(output_file_path, 'w') as output_file:\n",
     "    for pubmed_id in unique_pubmed_ids:\n",
     "        output_file.write(pubmed_id + '\\n')\n",
