--- a/epirev/consensus_pubs.ipynb
+++ b/epirev/consensus_pubs.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "text": [
       "Karla's screen: 182\n",
       "Included publication after conflict resolution: 171\n",
-      "Unreviewed, included from Alessandro's screen: 48\n"
+      "Unreviewed, included from Alessandro's screen: 35\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
     "print(\"Karla's screen:\", len(karla_pubmed_ids))\n",
     "print(\"Included publication after conflict resolution:\", len(consensus_pubmed_ids))\n",
     "# Step 2: Identify PubMed IDs present in the first file but not in the second file\n",
-    "unique_pubmed_ids = [pubmed_id for pubmed_id in karla_pubmed_ids if pubmed_id not in consensus_pubmed_ids]\n",
+    "unique_pubmed_ids = [pubmed_id for pubmed_id in consensus_pubmed_ids if pubmed_id not in karla_pubmed_ids]\n",
     "\n",
     "# Step 3: Save the unique PubMed IDs to a new TXT file\n",
     "output_file_path = '/home/kivi/Downloads/unreviewed_pubmed_ids.txt'\n",
