--- a/notebooks/anonymize_metadata.ipynb
+++ b/notebooks/anonymize_metadata.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVEoumGRJP3Q3gFyuCvQj6",
+      "authorship_tag": "ABX9TyP8yv9Xnzy3DXGagiWuLj4P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,11 +213,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "results_concat = pd.read_excel(main_folder + \"results-concat.xlsx\")\n",
+        "\n",
+        "def anonymize_en(en_list, mapping):\n",
+        "  anonymized_en = []\n",
+        "  for channel in en_list:\n",
+        "    contact_1, contact_2 = channel.split('-')\n",
+        "    anonymized_contact_1 = mapping.get(contact_1)\n",
+        "    anonymized_contact_2 = mapping.get(contact_2)\n",
+        "\n",
+        "    anonymized_en.append(f\"{anonymized_contact_1}-{anonymized_contact_2}\")\n",
+        "    return anonymized_en\n",
+        "\n",
+        "# Apply the anonymization for the 'EN' column\n",
+        "results_concat['anonymized_EN'] = results_concat.apply(lambda row: anonymize_en([contact.strip(\" \").strip(\"'\").strip('\"') for contact in row['EN'].strip(\"[]\").split(',')], contact_mapping[row['subject']]), axis=1)\n",
+        "\n",
+        "results_concat['anonymized_subject'] = results_concat['subject'].map(subs_names)"
+      ],
+      "metadata": {
+        "id": "rfuHhb3SpYnC"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Q3Kbx95_nZkY"
+        "id": "avFLtBjHrh81"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     }
   ]
