--- a/notebooks/game_vKarla_score_winner_union_res_overlap.ipynb
+++ b/notebooks/game_vKarla_score_winner_union_res_overlap.ipynb
@@ -1,29 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zFmjOdE6BZXh"
-      },
-      "source": [
-        "##### This notebook implements an updated version of the game of networks.\n",
-        "##### The first version (match.py) is played between node pairs and a strategy is used to select a \"card\" from the CVS \"deck\".\n",
-        "##### The first version had several problems.\n",
-        "#####    - The strategy implementation (av_choice, mm_choice) was a derivative of the original strategy (average, MM)\n",
-        "#####    - The turns were repeats for all strategies, except the random strategy\n",
-        "##### In this game, the players are random groups of nodes, which makes it the game of neworks. The size of a random subnet is a fraction of the total node number (implanted iEEG channels; e.g., 0.1X). The number of players is also dependant on the total node number (e.g., 5X).\n",
-        "##### A player's deck consisted of each pair's connectivity change score. The score is a function of the cross-validation scores (CVS). We considered several options:\n",
-        "#####    - Coefficient of variation\n",
-        "#####    - MM\n",
-        "#####    - Average\n",
-        "#####    - Max\n",
-        "#####    - Random\n",
-        "##### All players draw a card simultaneously, without knowing the other player's cards (incomplete information game).\n",
-        "##### The card selection is RANDOM. Why? Because the game is NOT a simulation of the connectivity dynamics that happend under the hood of the EEG signal. The game is an analysis tool, that merely identifies the groups that change their connectivity the most.\n",
-        "##### The game finishes once the decks are exhausted.\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -35,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/gdrive\n"
           ]
@@ -45,18 +22,12 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "from random import randint, sample\n",
-        "from scipy.interpolate import interp1d\n",
-        "from pickle import dump, load\n",
+        "from random import randint\n",
+        "from pickle import load\n",
         "\n",
         "woi = \"preseizure1\"\n",
         "\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')\n",
-        "main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
-        "\n",
-        "# main_folder = \"/media/kivi/ADATA HV100/epigame-folder/\"\n",
+        "main_folder = \"/media/kivi/ADATA HV100/epigame-folder/\"\n",
         "# main_folder = \"/media/kivi/ADATA HV100/epigame-folder/epigame-folder-20230926T081603Z-023/epigame-folder/30sec/\"\n",
         "# main_folder = \"/home/kivi/Documents/\"\n",
         "\n",
@@ -325,16 +296,16 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "bQ1FJs9qAUFp",
-        "outputId": "db8a8b2f-dd7c-4be1-f287-69813422c280",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bQ1FJs9qAUFp",
+        "outputId": "db8a8b2f-dd7c-4be1-f287-69813422c280"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting statannot\n",
             "  Downloading statannot-0.2.3-py3-none-any.whl (10 kB)\n",
@@ -421,6 +392,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "wXTVv46uIhB4"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -460,12 +436,7 @@
         "\n",
         "    else:\n",
         "        return 0\n"
-      ],
-      "metadata": {
-        "id": "wXTVv46uIhB4"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
